<resources>
    <string name="app_name">My App</string>
    <string name="bibl">Библиотека растений</string>
    <string name="myrast">Мои растения</string>
    <string name="vvod">Введите название</string>
    <string name="naiti">Найти растение</string>
    <string name="mnogorast">Поиск среди более 10 тысяч видов растений</string>
    <string name="pomosh">Помощь в уходе за растениями</string>
    <string name="back">На главную</string>
    <string name="nazv1">Алоказия Поли</string>
    <string name="nazv2">Аукуба</string>
    <string name="nazv3">Каладиум</string>
    <string name="nazv4">Сциндаптус</string>
    <string name="kom">Комнатные растения</string>
    <string name="watering_format">Watering: %s</string>
    <string name="sunlight_format">Sunlight: %s</string>
    <string name="cycle_format">Cycle: %s</string>
    <string name="search">Поиск</string>
    <string name="vvodtext">Введите название растения</string>

    <!-- Error messages -->
    <string name="error_invalid_plant">Некорректные данные растения</string>
    <string name="error_loading_plant_details">Ошибка загрузки данных: %s</string>
    <string name="error_displaying_plant_details">Ошибка отображения данных растения</string>
    <string name="error_loading_plant">Ошибка загрузки растения</string>
    
    <!-- Plant information -->
    <string name="unknown_plant_name">Название неизвестно</string>
    <string name="scientific_name_not_available">Научное название отсутствует</string>
    <string name="info_not_available">Информация отсутствует</string>

    <!-- Notification -->
    <string name="channel_name">Уход за растениями</string>
    <string name="channel_description">Напоминания об уходе за растениями</string>
    <string name="notification_title">Уход за растениями</string>
    <string name="start_notifications">Включить напоминания</string>
    <string name="stop_notifications">Выключить напоминания</string>
    <string name="notifications_started">Напоминания включены</string>
    <string name="notifications_stopped">Напоминания выключены</string>
    <string name="toggle_notifications">Включить/выключить напоминания</string>

    <string name="tip_1">Не забудьте полить ваши растения!</string>
    <string name="tip_2">Проверьте освещение ваших растений</string>
    <string name="tip_3">Время подкормить ваши растения</string>
    <string name="tip_4">Проверьте влажность почвы</string>
    <string name="tip_5">Осмотрите листья на наличие вредителей</string>

    <string name="plant_1">Алоэ Вера</string>
    <string name="plant_2">Фикус</string>
    <string name="plant_3">Орхидея</string>
    <string name="plant_4">Кактус</string>
    <string name="plant_5">Монстера</string>

</resources>